Null Pointer bug fix